--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,8 @@ ul {
     width: 100%;
     background-color: rgb(30, 30, 30);
 }
+
+.css-waryrq {
+    background: rgb(39, 39, 39);
+    flex: 1 0 20%;
+}
